<resources>
    <string name="app_name">TimeTracker</string>
    <string name="app_header">Time Tracker</string>

    <string name="action_the_most_frequent">The most frequent activities</string>
    <string name="action_the_biggest_total_time">The biggest total time of all categories</string>
    <string name="action_total_time_by_selected_categories">The biggest total time by selected categories</string>
    <string name="action_total_time">The total time of all categories</string>

    <string name="main_header">Statistics</string>

    <string name="create_record">Create new record</string>
    <string name="create_record_button">Create</string>

    <string name="record">Record</string>
    <string name="record_description">Description: </string>
    <string name="record_category">Category: </string>
    <string name="record_start">Start time: </string>
    <string name="record_end">End time: </string>
    <string name="record_start_time">Start time tag</string>
    <string name="record_end_time">End time tag</string>
    <string name="record_time">Time (days:hours:minutes): </string>
    <string name="record_tap_to_set_start">(Tap to set start time)</string>
    <string name="record_tap_to_set_end">(Tap to set end time)</string>
    <string name="record_photo">Photo: </string>
    <string name="record_attach">Attach</string>
    <string name="record_delete_images">Clear All</string>
    <string name="record_time_days">Days: </string>
    <string name="record_time_hours">Hours: </string>
    <string name="record_time_minutes">Minutes: </string>

    <string name="show_record">Record</string>
    <string name="edit_record_button">Edit</string>
    <string name="delete_record_button">Delete</string>

    <string name="edit_activity">Edit</string>
    <string name="edit_meeting_json">meeting json</string>
    <string name="edit_save_button">Save</string>

    <string name="mode_create">create</string>
    <string name="mode_edit">edit</string>

    <string name="stat_for_month">For a month:</string>
    <string name="button_for_month">For a month</string>
    <string name="stat_freq_header">Most frequent activities</string>
    <string name="stat_max_header">Max total time by categories</string>
    <string name="stat_total_header">Total time by selected categories</string>
    <string name="stat_chart_header">Pie chart of time by all categories</string>
    <string name="stat_no_records">There are no records</string>
    <string name="stat_no_checked_categories">There are no any checked categories</string>
    <string name="stat_">Choose time period:</string>
    <string name="stat_period">For period:</string>
    <string name="choose_period_button">Choose period</string>
    <string name="chart_header">Pie chart for</string>
    <string name="ok_button_text">OK</string>
    <string name="data_for_chart">data</string>
    <string name="desc_for_chart">desc</string>
    <string name="header_chart_params">Choose time period:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
