<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pie_diagram"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lena.timetracker.PieDiagramActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/ScrollView01"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

        <RelativeLayout
            android:id="@+id/chart_layout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp">

            <RelativeLayout
                android:id="@+id/chart_layout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:layout_marginTop="100dp">

                <TextView
                    android:id="@+id/chart_header_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:paddingEnd="8dp"
                    style="@style/FontHeader"
                    android:layout_marginBottom="30dp"
                    android:text="@string/header_chart_params"/>

                <TextView
                    android:id="@+id/chart_start_textview"
                    android:layout_below="@+id/chart_header_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingEnd="8dp"
                    android:text="@string/record_start"/>

                <TextView
                    android:id="@+id/chart_record_set_start_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/chart_header_textview"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="13dp"
                    android:text="@string/record_tap_to_set_start"/>

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/chart_layout4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/chart_layout3"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/chart_end_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingEnd="8dp"
                    android:text="@string/record_end"/>

                <TextView
                    android:id="@+id/chart_set_end_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="13dp"
                    android:text="@string/record_tap_to_set_end"/>

            </RelativeLayout>

            <Button
                android:id="@+id/choose_period_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/chart_layout4"
                android:text="@string/choose_period_button"/>

            <Button
                android:id="@+id/for_a_month_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/chart_layout4"
                android:text="@string/button_for_month"/>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
