<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_max_total_time"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lena.timetracker.MaxTotalTimeActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/ScrollView01"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

        <RelativeLayout
            android:id="@+id/total_layout5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="40dp">

            <TextView
                android:id="@+id/textView"
                style="@style/FontHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/stat_max_header"/>

            <RelativeLayout
                android:id="@+id/max_layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/max_period_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="74dp"
                    android:text="@string/stat_for_month"/>

                <TextView
                    android:id="@+id/max_result_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/max_period_textView"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="5dp"
                    style="@style/FontStat"
                    android:text="@string/stat_no_records"/>

                <TextView
                    android:id="@+id/max_sum_result_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/max_period_textView"
                    android:layout_marginTop="5dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="20dp"
                    style="@style/FontStat"/>

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/max_layout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/max_layout2"
                android:paddingBottom="16dp">

                <TextView
                    android:id="@+id/max_start_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingEnd="8dp"
                    android:text="@string/record_start"/>

                <TextView
                    android:id="@+id/max_record_set_start_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="13dp"
                    android:text="@string/record_tap_to_set_start"/>

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/freq_layout4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/max_layout3"
                android:paddingBottom="16dp">

                <TextView
                    android:id="@+id/max_end_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingEnd="8dp"
                    android:text="@string/record_end"/>

                <TextView
                    android:id="@+id/max_record_set_end_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="13dp"
                    android:text="@string/record_tap_to_set_end"/>

            </RelativeLayout>

            <Button
                android:id="@+id/choose_period_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/freq_layout4"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="39dp"
                android:text="@string/choose_period_button"/>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
