<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_record"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lena.timetracker.CreateRecordActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/ScrollView01"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/create_header_textview"
                style="@style/FontHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/create_record"/>

            <RelativeLayout
                android:id="@+id/layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingBottom="16dp">

                <TextView
                    android:id="@+id/record_desc_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:labelFor="@+id/meeting_name_edittext"
                    android:paddingEnd="8dp"
                    android:text="@string/record_description"/>

                <EditText
                    android:id="@+id/create_record_desc_edittext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:ems="13"
                    android:inputType="textMultiLine"/>

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout1"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                >

                <TextView
                    android:id="@+id/record_category_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingEnd="8dp"
                    android:text="@string/record_category"/>

                <Spinner
                    android:id="@+id/create_record_category_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:ems="13"/>

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/layout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout2"
                android:paddingBottom="16dp">

                <TextView
                    android:id="@+id/create_record_start_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingEnd="8dp"
                    android:text="@string/record_start"/>

                <TextView
                    android:id="@+id/create_record_set_start_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="13dp"
                    android:text="@string/record_tap_to_set_start"/>

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/layout4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout3"
                android:paddingBottom="16dp">

                <TextView
                    android:id="@+id/create_record_end_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingEnd="8dp"
                    android:text="@string/record_end"/>

                <TextView
                    android:id="@+id/create_record_set_end_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="13dp"
                    android:text="@string/record_tap_to_set_end"/>

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/layout5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="false"
                android:layout_below="@+id/layout4"
                android:paddingTop="16dp"
                android:paddingBottom="16dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/inner_layout">

                    <TextView
                        android:id="@+id/create_record_photo_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:labelFor="@+id/create_record_button"
                        android:paddingEnd="8dp"
                        android:text="@string/record_photo"/>

                    <Button
                        android:text="@string/record_attach"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:id="@+id/attach_button"/>
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/imageviews_layout"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/inner_layout"
                    android:paddingBottom="20dp"
                    android:layout_alignParentEnd="true">
                </LinearLayout>


            </RelativeLayout>

            <Button
                android:id="@+id/create_record_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout5"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:text="@string/create_record_button"/>

        </RelativeLayout>
    </ScrollView>


</RelativeLayout>
